KUBE/07.Ingress/01.backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  defaultBackend: # 경로와 일치하지 않는 서비스에 대한 요청 처리
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: static-assets
  rules:
  - http:
      paths:
      - path: /icons # 기준 경로(k8s.example.com/icons. 여러 경로가 일치하는 경우에는 가장 길게 일치하는 경로가 우선)
        pathType: ImplementationSpecific # 경로 유형의 일치 여부는 Ingress Class에 따라 다름
        backend: # 인그레스 오브젝트와 동일한 네임스페이스 내에 있는 다른 쿠버네티스 리소스에 대한 오브젝트 설정
          resource: # 정적(Static) 데이터에 대한 Object Storage Backend로 데이터 수신
            apiGroup: k8s.example.com
            kind: StorageBucket
            name: icon-assets
