KUBE/07.Ingress/02.wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "foo.bar.com" # foo.bar.com 접속
    http:
      paths:
      - pathType: Prefix
        path: "/bar" # foo.bar.com/bar 경로로 접속 시
        backend:
          service: # foo.bar.com/bar 접속 시 아래 서비스로 포워딩(service1:80)
            name: service1
            port:
              number: 80
  - host: "*.foo.com" # foo.com 주소 기준(예 : abc.foo.com, k8s.foo.com 등 위에서 지정하지 않은 도메인 주소)
    http:
      paths:
      - pathType: Prefix
        path: "/foo" # *.foo.com/foo 경로 사용
        backend: # *.foo.com/foo 접속 시 아래 서비스로 포워딩(service2:80)
          service:
            name: service2
            port:
              number: 80
